adicionando novas fotos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 
           <div>
             <div class="card">
+              <img class="card_imagem" src="./images/maria_1.jpg" alt="" />
+              <p class="card_titulo">Maria</p>
+            </div>
+
+            <div class="card">
               <img class="card_imagem" src="./images/laritte_1.jpg" alt="" />
               <p class="card_titulo">Laritte</p>
             </div>
@@ -80,6 +85,11 @@
 
             <div class="card">
               <img class="card_imagem" src="./images/DTIYS_3.jpg" alt="" />
+              <p class="card_titulo">Dtiys</p>
+            </div>
+
+            <div class="card">
+              <img class="card_imagem" src="./images/DTIYS_4.jpg" alt="" />
               <p class="card_titulo">Dtiys</p>
             </div>
 
@@ -140,6 +150,24 @@
                 alt=""
               />
               <p class="card_titulo">Felix & Georgia</p>
+            </div>
+
+            <div class="card">
+              <img
+                class="card_imagem"
+                src="./images/tania_william_1.jpg"
+                alt=""
+              />
+              <p class="card_titulo">Tania & William</p>
+            </div>
+
+            <div class="card">
+              <img
+                class="card_imagem"
+                src="./images/tania_william_1.jpg"
+                alt=""
+              />
+              <p class="card_titulo">Laritte & Merlim</p>
             </div>
           </div>
         </div>
