corrigindo erro de foto

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="card">
               <img
                 class="card_imagem"
-                src="./images/tania_william_1.jpg"
+                src="./images/laritte_merlim_1.jpg"
                 alt=""
               />
               <p class="card_titulo">Laritte & Merlim</p>
