ajustando nome da personagem

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 
           <div>
             <div class="card">
+              <img class="card_imagem" src="./images/DTIYS_2.jpg" alt="" />
+              <p class="card_titulo">Karma</p>
+            </div>
+
+            <div class="card">
               <img class="card_imagem" src="./images/maria_1.jpg" alt="" />
               <p class="card_titulo">Maria</p>
             </div>
@@ -76,11 +81,6 @@
 
             <div class="card">
               <img class="card_imagem" src="./images/DTIYS_1.jpg" alt="" />
-              <p class="card_titulo">Dtiys</p>
-            </div>
-
-            <div class="card">
-              <img class="card_imagem" src="./images/DTIYS_2.jpg" alt="" />
               <p class="card_titulo">Dtiys</p>
             </div>
 
