ajustando nomes e fotos

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             desenhos que contassem uma história para os bons observadores.
           </p>
           <div>
-            <img src="./images/karma.jpg" alt="" />
+            <img src="./images/logo.jpg" alt="" />
           </div>
         </div>
 
@@ -55,7 +55,7 @@
 
           <div>
             <div class="card">
-              <img class="card_imagem" src="./images/DTIYS_2.jpg" alt="" />
+              <img class="card_imagem" src="./images/karma.jpg" alt="" />
               <p class="card_titulo">Karma</p>
             </div>
 
@@ -85,12 +85,12 @@
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/DTIYS_3.jpg" alt="" />
+              <img class="card_imagem" src="./images/DTIYS_2.jpg" alt="" />
               <p class="card_titulo">Dtiys</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/DTIYS_4.jpg" alt="" />
+              <img class="card_imagem" src="./images/DTIYS_3.jpg" alt="" />
               <p class="card_titulo">Dtiys</p>
             </div>
 
