adicionando novas fotos e tirando algumas

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             </div>
 
             <div class="card">
+              <img class="card_imagem" src="./images/gabriela_1.jpg" alt="" />
+              <p class="card_titulo">Gabriela</p>
+            </div>
+
+            <div class="card">
               <img class="card_imagem" src="./images/laritte_1.jpg" alt="" />
               <p class="card_titulo">Laritte</p>
             </div>
@@ -86,11 +91,6 @@
 
             <div class="card">
               <img class="card_imagem" src="./images/DTIYS_2.jpg" alt="" />
-              <p class="card_titulo">Dtiys</p>
-            </div>
-
-            <div class="card">
-              <img class="card_imagem" src="./images/DTIYS_3.jpg" alt="" />
               <p class="card_titulo">Dtiys</p>
             </div>
 
