ajustando texto da bio

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
         <div id="biografia">
           <p>
-            O nome Karma Leonna foi criado pelo pensamento de que karma tem a
-            ver com o espírito e alma, e leonna lembra ao nome de leão, uma
+            O nome Karma Leonna foi criado pelo pensamento de que Karma tem a
+            ver com o espírito e alma, e Leonna lembra ao nome de leão, uma
             pessoa forte, ou seja, um alma de leão. Sempre achei maravilhoso as
             obras maravilhosas e coloridas que traziam um história por trás de
             seus mínimos detalhes, quase sendo oculto a quem não prestasse
