ajustando nova secao de comissao e ajustando responsividade

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <nav>
           <ul>
             <li><a href="#biografia">Biografia</a></li>
+            <li><a href="#comissao">Comissão</a></li>
             <li><a href="#artes">Artes</a></li>
             <li><a href="#contato">Contato</a></li>
           </ul>
@@ -50,79 +51,143 @@
           </div>
         </div>
 
+        <div id="comissao">
+          <h2>Comissão</h2>
+
+          <div id="comissao_imagem">
+            <img src="./images/comissao.jpg" alt="imagem de comissão" />
+          </div>
+        </div>
+
         <div id="artes">
           <h2>Artes</h2>
 
           <div>
             <div class="card">
-              <img class="card_imagem" src="./images/karma.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/karma.jpg"
+                alt="imagem da Karma"
+              />
               <p class="card_titulo">Karma</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/maria_1.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/maria_1.jpg"
+                alt="imagem da Karma"
+              />
               <p class="card_titulo">Maria</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/gabriela_1.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/gabriela_1.jpg"
+                alt="imagem da Gabriela"
+              />
               <p class="card_titulo">Gabriela</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/laritte_1.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/laritte_1.jpg"
+                alt="imagem da Laritte"
+              />
               <p class="card_titulo">Laritte</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/laritte_2.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/laritte_2.jpg"
+                alt="imagem da Laritte"
+              />
               <p class="card_titulo">Laritte</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/laritte_3.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/laritte_3.jpg"
+                alt="imagem da Laritte"
+              />
               <p class="card_titulo">Laritte</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/DTIYS_1.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/DTIYS_1.jpg"
+                alt="imagem de DTIYS"
+              />
               <p class="card_titulo">Dtiys</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/DTIYS_2.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/DTIYS_2.jpg"
+                alt="imagem de DTIYS"
+              />
               <p class="card_titulo">Dtiys</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/felix_1.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/felix_1.jpg"
+                alt="imagem do Felix"
+              />
               <p class="card_titulo">Felix</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/felix_2.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/felix_2.jpg"
+                alt="imagem do Felix"
+              />
               <p class="card_titulo">Felix</p>
               <p class="card_tempo"></p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/felix_3.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/felix_3.jpg"
+                alt="imagem do Felix"
+              />
               <p class="card_titulo">Felix</p>
               <p class="card_tempo"></p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/georgia_1.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/georgia_1.jpg"
+                alt="imagem da Georgia"
+              />
               <p class="card_titulo">Georgia</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/georgia_2.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/georgia_2.jpg"
+                alt="imagem da Georgia"
+              />
               <p class="card_titulo">Georgia</p>
             </div>
 
             <div class="card">
-              <img class="card_imagem" src="./images/georgia_3.jpg" alt="" />
+              <img
+                class="card_imagem"
+                src="./images/georgia_3.jpg"
+                alt="imagem da Georgia"
+              />
               <p class="card_titulo">Georgia</p>
             </div>
 
