--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <p>
             O nome Karma Leonna foi criado pelo pensamento de que Karma tem a
             ver com o espírito e alma, e Leonna lembra ao nome de leão, uma
-            pessoa forte, ou seja, um alma de leão. Sempre achei maravilhoso as
+            pessoa forte, ou seja, uma alma de leão. Sempre achei maravilhoso as
             obras maravilhosas e coloridas que traziam um história por trás de
             seus mínimos detalhes, quase sendo oculto a quem não prestasse
             atenção, com isso começou a crescer a minha vontade de fazer
